<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    TEST AD IDs-->
    <!--<string name="app_nativeAd_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="app_bannerAd_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_interstitialAd_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_unit_id">ca-app-pub-3940256099942544~3347511713</string>-->

    <string name="app_nativeAd_id">ca-app-pub-7631076624838275/2180194525</string>
    <string name="app_bannerAd_id">ca-app-pub-7631076624838275/7772514125</string>
    <string name="app_interstitialAd_id">ca-app-pub-7631076624838275/4224931603</string>
    <string name="app_unit_id">ca-app-pub-7631076624838275~6917515883</string>

    <string name="app_name">Pro Video Player</string>

    <string name="ad_attribution">Ad</string>

    <string name="view">viewName</string>
    <string name="pos">position</string>
    <string name="modelData">data</string>

    <string name="DRAWER_CLOSE">Drawer Is Close</string>
    <string name="DRAWER_OPEN">Drawer Is Open</string>
    <string name="Privacy">Privacy Policy</string>

    <string name="time">00:00</string>
    <string name="title_settings_dialog">Permissions Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_general">General</string>
    <string name="lbl_screen_orientation">Screen Orientation</string>
    <string name="set_orientation_msg">screen orientation during playback</string>
    <string name="lbl_last_play">Last Play Video</string>
    <string name="lbl_auto_play">Auto Play Next</string>
    <string name="lbl_share_friend">Share to friends</string>
    <string name="lbl_hot_app">Hot App</string>
    <string name="lbl_rate_app">Rate App</string>
    <string name="lbl_more_app">More App</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_auto">Auto</string>
    <string name="lbl_vertical">Vertical</string>
    <string name="lbl_landscap">Landscap</string>
    <string name="songName">song Name</string>
    <string name="lbl_cancel">CANCEL</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_sleeping">Sleeping...</string>
    <string name="action_last_play">Last Play</string>
    <string name="action_select">Select</string>
    <string name="action_view_as">View As</string>
    <string name="action_list">List</string>
    <string name="action_grid">Grid</string>
    <string name="action_full_title">Full Title</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_name">Name</string>
    <string name="action_size">Size</string>
    <string name="action_duration">Duration</string>
    <string name="action_Amount">Amount</string>
    <string name="action_date">Date</string>
    <string name="action_old_to_new">Old to New</string>
    <string name="action_new_to_old">New to Old</string>
    <string name="actopn_reverse_all">Reverse All</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_remove_all">Remove all</string>
    <string name="action_setting">Setting</string>
    <string name="lbl_best_fit">BEST FIT</string>
    <string name="lbl_fill">FILL</string>
    <string name="lbl_original">ORIGINAL</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_rename">Rename</string>
    <string name="lbl_remove">Remove</string>
    <string name="delete_file_not_exist">The file, you want to delete is not exist, please refresh and try again...!</string>
    <string name="rename_fail">Oops! rename failed</string>
    <string name="rename_file_not_exist">The file, you want to rename is not exist, please refresh and try again...!</string>
    <string name="rename_success">File Rename Successfully</string>
    <string name="dir_rename_success">File Rename Successfully</string>
    <string name="msg_delete">Are you sure you want to delete file?</string>
    <string name="msg_delete_selected">Are you sure you want to delete selected</string>
    <string name="lbl_delete">Delete</string>
    <string name="delete_success">File Deleted Successfully</string>
    <string name="lbl_remove_list">Remove List</string>
    <string name="msg_remove">Are you sure you want to remove file from recent?</string>
    <string name="msg_remove_all">Are you sure you want to remove all files from recent?</string>
    <string name="lbl_share_using">Share Using</string>
    <string name="last_play_error">There is no last played record found, please play from video list.</string>
    <string name="msg_refresh">Refreshing</string>
    <string name="msg_delet_folder">Are you sure you want to delete this Folder?</string>
    <string name="delete_directory_not_exist">The directory, you want to delete is not exist, please refresh and try again...!</string>
    <string name="delete_directory_success">Directory Deleted Successfully</string>
    <string name="lbl_select">Select</string>
    <string name="select_video_empty">Please select video first</string>
    <string name="empty_video_tab">Video files not found</string>
    <string name="empty_folder_tab">Video Folders not found</string>
    <string name="empty_recent_tab">No recent videos available.</string>
    <string name="lbl_select_not_found">Videos not found to select</string>
    <string name="lbl_play_speed">Play speed :</string>
    <string name="lbl_0_5x">0.5X</string>
    <string name="lbl_0_75x">0.75X</string>
    <string name="lbl_1_0x">1.0X</string>
    <string name="lbl_1_25x">1.25X</string>
    <string name="lbl_1_5x">1.5X</string>
    <string name="lbl_2_0x">2.0X</string>
    <string name="lbl_empty_records">No Records</string>
    <string name="lbl_brightness">Brightness : 15</string>
    <string name="lbl_volume">Volume : 15</string>
    <string name="lbl_10s">+10s</string>
    <string name="lbl_minus_10s">-10s</string>
    <string name="action_search">Search</string>
    <string name="delete_msg">Are you sure yo want to delete</string>
    <string name="permission_text">Need to allow read and write storage permission to make app functions work properly</string>
    <string name="lbl_allow">Allow</string>
</resources>
