<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieDelete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/permission" />

    <TextView
        style="@style/MainTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/permission_text"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/bg_background"
        android:text="@string/lbl_allow"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/worksans_regular"/>

    <Button
        android:id="@+id/btnCancel"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cancel"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/worksans_regular"
        android:visibility="gone"/>
</LinearLayout>