<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_screen_orientation"
            style="@style/MainTextViewStyle"
            android:fontFamily="@font/worksans_semi_bold"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/lbl_auto"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvVertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/lbl_vertical"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/tvLandscap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/lbl_landscap"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>