<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_background"
    android:orientation="vertical">
    <!--    #f1f1f1-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:paddingBottom="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_semi_bold"
            android:text="@string/lbl_delete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvDeleteMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/worksans_regular"
            android:text="@string/delete_msg"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieDelete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/rating"/>

            <TextView
                android:id="@+id/tvRateMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:text="Like Using Video Player"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/tvRateMsg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/worksans_regular"
                android:gravity="center"
                android:text="Recommend us to others by rating us on Play Store"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/lbl_rate_app"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btnExit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cancel"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDeleteButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:gravity="end"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel"
            android:textColor="@color/colorWhiteTransparentLight"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btnDelete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok"
            android:textColor="@color/colorWhiteTransparentLight"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</LinearLayout>