<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_background"
    android:orientation="vertical">
    <!--    #f1f1f1-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:paddingBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans_semi_bold"
            android:text="@string/lbl_rename"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/etRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:backgroundTint="@color/colorWhiteTransparentLight"
            android:fontFamily="@font/worksans_regular"
            android:hint="Please input video name"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="@dimen/_12sdp"
            tools:text="dsdsdsd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel"
            android:textColor="@color/colorWhiteTransparentLight"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btnRename"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</LinearLayout>
