<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@drawable/bg_background">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/songName"
                        android:padding="@dimen/_7sdp"
                        app:tint="@color/colorWhite"
                        app:srcCompat="@drawable/ic_back" />

                    <TextView
                        android:id="@+id/tvSelection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/lbl_select"
                        style="@style/MainTextViewStyle"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"/>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieDelete"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        app:lottie_rawRes="@raw/delete_lottie_white"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"/>

                    <ImageView
                        android:id="@+id/ivDelete"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/songName"
                        android:padding="@dimen/_5sdp"
                        app:tint="@color/colorBlack"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_delete" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/llCountAndSelectAllChk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvVidCountSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/_7sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlSymmetry"
                tools:text="sdsjdkskdjsd" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chkAll"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_7sdp"
                android:theme="@style/checkboxTheme"/>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <LinearLayout
            android:id="@+id/llEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/ic_video_empty1"
                app:tint="@color/colorBlackTransparentLight"/>

            <TextView
                android:id="@+id/tvErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:gravity="center"
                android:text="@string/empty_video_tab"
                android:textColor="@color/colorBlackTransparent"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>